third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/table/duplicate-key-dotted-table2.stderr
TOML parse error at line 4, column 1
  |
4 | [fruit.apple.taste] # INVALID
  | ^
invalid table header
duplicate key `taste` in table `fruit.apple`
